@@ -1,3 +1,9 @@
+2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tclWin32Dll.c: fix gcc warnings: unused variable 'registration'
+	* win/tclWinChan.c:
+	* win/tclWinFCmd.c:
+
 2010-11-18  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclAppInit.c: [FRQ 491789]: "setargv() doesn't support a
